# ChangeLog for kde-base/kdelibs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.693 2010/07/03 03:23:08 jmbsvicetto Exp $

  03 Jul 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  kdelibs-4.4.5.ebuild:
  [kde-base/kdelibs-4.4.5] Restored ~x86-fbsd keyword.

*kdelibs-4.4.5 (30 Jun 2010)

  30 Jun 2010; Alexey Shvetsov <alexxy@gentoo.org> +kdelibs-4.4.5.ebuild:
  Version bump

  27 Jun 2010; Christian Faulhammer <fauli@gentoo.org> kdelibs-4.4.4.ebuild:
  x86 stable, bug 322791

  24 Jun 2010; Christoph Mende <angelos@gentoo.org> kdelibs-4.4.4.ebuild:
  Stable on amd64 wrt bug #322791

  23 Jun 2010; Maciej Mrozowski <reavertm@gentoo.org> kdelibs-4.4.4.ebuild:
  Move polkit-kde dependency from kdebase-meta to kdelibs, see bug 310999

  21 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdelibs-4.3.3-r1.ebuild, kdelibs-4.3.5.ebuild, kdelibs-4.4.4.ebuild:
  Drop 4.3.3. Drop hppa keywords per bug #304363

*kdelibs-4.4.4 (06 Jun 2010)

  06 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdelibs-4.4.2.ebuild, -kdelibs-4.4.3.ebuild, +kdelibs-4.4.4.ebuild:
  Remove old. Version bump.

  05 Jun 2010; Maciej Mrozowski <reavertm@gentoo.org> kdelibs-4.4.2.ebuild,
  kdelibs-4.4.3.ebuild:
  Only build enchant Sonnet backend, fixes bug 316129

  28 May 2010; Maciej Mrozowski <reavertm@gentoo.org> kdelibs-4.4.2.ebuild,
  kdelibs-4.4.3.ebuild, +files/kdelibs-4.4.3-mimetypes.patch:
  Update libattica deps - bug 314539, add mimetypes patch - bug 261446 (no
  revbump as it's less relevant)

  15 May 2010; Maciej Mrozowski <reavertm@gentoo.org>
  kdelibs-4.3.3-r1.ebuild, kdelibs-4.3.5.ebuild, kdelibs-4.4.2.ebuild,
  kdelibs-4.4.3.ebuild:
  Remove automoc from dependencies (in eclass)

  04 May 2010; Alexey Shvetsov <alexxy@gentoo.org> kdelibs-4.4.3.ebuild:
  Restore accidently dropped ~x86-fbsd keyword on KDE SC 4.4.3
