@@ -24,6 +24,6 @@ DIST kdelibs-4.4.4.tar.bz2 14086349 RMD160 9f755332927f9d3df3d80a6e72d45af0055b1
 DIST kdelibs-4.4.5.tar.bz2 14088335 RMD160 533a627116524d5365ba45f5eb17c972426f59c1 SHA1 73e37abee48536b85782d1a17f1b282313b16c4d SHA256 11d79203e70ba104bf5414cb2a4e8919793ffb5b201592f28fc8ae325c8c6085
 EBUILD kdelibs-4.3.5.ebuild 8917 RMD160 6db0b2c668d78bbe3cd7ec791942fe4fb7a7742e SHA1 39363a747e7d7157972b2560bb1b13a5069b40fc SHA256 38741bcae260af8564e158d0534542bb84b1d7f159b685cb77abfc3c98e4c44a
 EBUILD kdelibs-4.4.4.ebuild 9275 RMD160 e4ac12f50878e7278d6962d7082530d01504cb9a SHA1 93068b445175fa24be3df615bb2c47c7b5ff72ff SHA256 0d1d08f95d3eae5a2fc8eb726cc68403dc1b9102ac8abc8b2dfd3441dbb921f0
-EBUILD kdelibs-4.4.5.ebuild 9283 RMD160 8d655b65d1f898992411b9e7ff2170d53daef8a4 SHA1 28a7df72d22b884791def7b42be1ab5bf346e96c SHA256 93094a75a7b46174b8b2b845dcbc37968a46105527c3618844fda4d1e6363999
-MISC ChangeLog 115503 RMD160 e6c4abd79d245123c4ba6f1f8071dcbb818823cb SHA1 f00713e27774a94fae3a9240a75bb4cb43fc6a27 SHA256 8994cdccadaea61999449703035f67b80166066be682c62b0a81b10782877124
+EBUILD kdelibs-4.4.5.ebuild 9282 RMD160 550f7cd66cb0e0fe761555ec5fa8dc8f75625f30 SHA1 57775deeb2000b3344cfbe8a52bb4e85dea8e666 SHA256 d6734b14cf933ac32539030f7d37b3d4ec5876de211c939d3e7b459e4ca7ded4
+MISC ChangeLog 115598 RMD160 adbcdb9ad4c0949a4bf71c95101bae5bfadd7ee3 SHA1 2b08d0b0026d0b3453f15b09a6c89af3b4e26024 SHA256 c58b49348a360624a9de25b4ad73e2358c870a70f4aee409f11dbd4c8a69d35f
 MISC metadata.xml 310 RMD160 29952f07b1829170319534936d11d39f1f7896bb SHA1 90ad5d77993322d4c25338f4005aaa4b642961c3 SHA256 1ce0cd7403862637e6e913bee33bf9f54a176bd1466d168be748e997a663095a
