@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdelibs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.693 2010/07/03 03:23:08 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.694 2010/07/23 23:00:29 ssuominen Exp $
+
+  23 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> kdelibs-4.4.5.ebuild:
+  Use virtual/jpeg.
 
   03 Jul 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   kdelibs-4.4.5.ebuild:
